--- a/app/src/main/res/layout/activity_goodscate_child.xml
+++ b/app/src/main/res/layout/activity_goodscate_child.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ac_goodsCate_rv"
+        android:layout_marginBottom="@dimen/dp_15"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
