--- a/app/src/main/res/layout/activity_goodscate_item.xml
+++ b/app/src/main/res/layout/activity_goodscate_item.xml
@@ -2,18 +2,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/dp_80"
-    android:layout_height="@dimen/dp_25"
+    android:layout_height="@dimen/dp_30"
     android:gravity="center"
-    android:layout_marginLeft="@dimen/dp_12"
-    android:layout_marginTop="@dimen/dp_5"
-    android:background="@drawable/gray_conner_2">
+    android:layout_marginLeft="@dimen/dp_10"
+    android:layout_marginTop="@dimen/dp_13"
+    android:background="@drawable/gray_conner_8">
    <TextView
        android:id="@+id/ac_goodsCate_tv_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:paddingLeft="@dimen/dp_8"
-       android:paddingRight="@dimen/dp_8"
-       android:paddingTop="@dimen/dp_2"
-       android:paddingBottom="@dimen/dp_2"
+       android:textSize="@dimen/sp_14"
+       android:textColor="@color/text3"
        android:text="农药1"/>
 </LinearLayout>
