--- a/app/src/main/res/layout/activity_pulish_goods.xml
+++ b/app/src/main/res/layout/activity_pulish_goods.xml
@@ -12,13 +12,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:focusableInTouchMode="true"
-        android:focusable="true">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:focusableInTouchMode="true"
+            android:focusable="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -108,10 +108,12 @@
                     android:id="@+id/ac_pulishGoods_iv_goodsImg"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginRight="@dimen/dp_12"
                     app:zib_left_margin="@dimen/dp_12"
                     app:zib_right_margin="@dimen/dp_12"
                     app:zib_img_padding="@dimen/dp_10"
-                    app:zib_img_size_one_line="3"
+                    app:zib_img_size_one_line="5"
                     app:zib_max_line="1"
                     app:zib_img_deletable="true"
                     app:zib_img_add="@drawable/iv_add"
@@ -155,11 +157,13 @@
                     android:id="@+id/ac_pulishGoods_iv_goodsContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginRight="@dimen/dp_12"
                     app:zib_left_margin="@dimen/dp_12"
                     app:zib_right_margin="@dimen/dp_12"
                     app:zib_img_padding="@dimen/dp_10"
-                    app:zib_img_size_one_line="3"
-                    app:zib_max_line="1"
+                    app:zib_img_size_one_line="5"
+                    app:zib_max_line="2"
                     app:zib_img_deletable="true"
                     app:zib_img_add="@drawable/iv_add"
                     app:zib_img_default="@drawable/iv_default"
@@ -189,6 +193,7 @@
                     android:layout_centerVertical="true"/>
 
                 <EditText
+                    android:inputType="number"
                     android:id="@+id/ac_pulishGoods_et_platformPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -230,6 +235,7 @@
                     android:layout_centerVertical="true"/>
 
                 <EditText
+                    android:inputType="number"
                     android:id="@+id/ac_pulishGoods_et_memberPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -272,6 +278,7 @@
                     android:layout_centerVertical="true"/>
 
                 <EditText
+                    android:inputType="number"
                     android:id="@+id/ac_pulishGoods_et_marketPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -312,6 +319,7 @@
                     android:textColor="@color/text3"/>
 
                 <EditText
+                    android:inputType="number"
                     android:id="@+id/ac_pulishGoods_et_inventory"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -329,6 +337,7 @@
                 android:layout_marginRight="@dimen/dp_12"></View>
 
             <RelativeLayout
+                android:id="@+id/ac_pulishGoods_rl_cateId"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40"
                 android:orientation="horizontal"
@@ -355,9 +364,9 @@
                     android:textSize="@dimen/sp_13"/>
 
                 <ImageView
-                    android:layout_width="@dimen/dp_6"
-                    android:layout_height="@dimen/dp_10"
-                    android:src="@drawable/gogoogogo"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:src="@drawable/goods_detail_select"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/dp_12"/>
@@ -413,6 +422,7 @@
                 android:layout_marginRight="@dimen/dp_12"></View>
 
             <RelativeLayout
+                android:id="@+id/ac_pulishGoods_rl_goodsType"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40"
                 android:orientation="horizontal"
@@ -439,9 +449,9 @@
                     android:textSize="@dimen/sp_13"/>
 
                 <ImageView
-                    android:layout_width="@dimen/dp_6"
-                    android:layout_height="@dimen/dp_10"
-                    android:src="@drawable/gogoogogo"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:src="@drawable/goods_detail_select"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/dp_12"/>
@@ -451,8 +461,35 @@
                 android:layout_height="@dimen/dp_1"
                 android:background="@color/background"
                 android:layout_marginLeft="@dimen/dp_12"
-                android:layout_marginRight="@dimen/dp_12"></View>
-
+                android:layout_marginRight="@dimen/dp_12"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="@dimen/dp_11">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="店长推荐"
+                    android:textSize="@dimen/sp_14"
+                    android:textColor="@color/text3"
+                    android:layout_centerVertical="true"/>
+                <ImageView
+                    android:id="@+id/at_publishGoods_iv_isTuiJian"
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_27"
+                    android:src="@drawable/at_edit_address_not_selector"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dp_12"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:background="@color/background"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12"/>
             <Button
                 android:id="@+id/ac_pulishGoods_btn_pulish"
                 android:layout_width="match_parent"
@@ -465,7 +502,6 @@
                 android:textSize="@dimen/sp_13"
                 android:textColor="@android:color/white"
                 android:layout_marginBottom="@dimen/dp_40"/>
-
         </LinearLayout>
     </ScrollView>
 
