--- a/app/src/main/res/layout/fragment_discver_service.xml
+++ b/app/src/main/res/layout/fragment_discver_service.xml
@@ -183,8 +183,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
-        android:paddingTop="@dimen/dp_10">
-
-    </android.support.v7.widget.RecyclerView>
-
+        android:paddingTop="@dimen/dp_10"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/dp_120"
+        android:text="搜索结果不存在，换个关键词试试？"/>
 </LinearLayout>
