--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -18,7 +18,7 @@
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
-               android:background="@color/line"/>
+               android:background="@color/background"/>
            <com.youth.banner.Banner
                android:id="@+id/banner_discover_service"
                android:layout_width="match_parent"
