--- a/app/src/main/res/layout/fragment_seckill_list.xml
+++ b/app/src/main/res/layout/fragment_seckill_list.xml
@@ -4,10 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.SecKillFragment">
-
-    <android.support.v7.widget.RecyclerView
-        android:background="@color/white"
-        android:id="@+id/fg_seckill_list_rv"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:background="@color/white"
+            android:id="@+id/fg_seckill_list_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <com.scwang.smartrefresh.layout.footer.BallPulseFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 </FrameLayout>
