--- a/app/src/main/res/layout/activity_location_store.xml
+++ b/app/src/main/res/layout/activity_location_store.xml
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
         android:background="@color/background"></View>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_45"
@@ -145,13 +144,16 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
-        android:background="@color/background"></View>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/at_location_store_rv"
+        android:background="@color/background"/>
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-    </android.support.v7.widget.RecyclerView>
-
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/at_location_store_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
