--- a/app/src/main/res/layout/activity_my_collect.xml
+++ b/app/src/main/res/layout/activity_my_collect.xml
@@ -15,83 +15,87 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
-        android:background="@color/line"/>
-   <ScrollView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
-       <LinearLayout
+        android:background="@color/background"/>
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+       <ScrollView
            android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:orientation="vertical"
-           android:background="@android:color/white">
+           android:layout_height="match_parent">
            <LinearLayout
-               android:layout_width="@dimen/dp_155"
-               android:layout_height="@dimen/dp_30"
-               android:layout_gravity="center_horizontal"
-               android:layout_marginTop="@dimen/dp_10"
-               android:layout_marginBottom="@dimen/dp_10"
-               android:background="@drawable/stroke_app_theme"
-               android:orientation="horizontal">
-
-               <TextView
-                   android:id="@+id/ac_myCollect_tv_goods"
-                   android:layout_width="0dp"
-                   android:layout_height="match_parent"
-                   android:layout_weight="1"
-                   android:layout_margin="@dimen/dp_3"
-                   android:textColor="@android:color/white"
-                   android:text="商品"
-                   android:textSize="@dimen/sp_16"
-                   android:background="@color/app_theme"
-                   android:gravity="center"/>
-               <TextView
-                   android:id="@+id/ac_myStore_tv_stores"
-                   android:layout_width="0dp"
-                   android:layout_height="match_parent"
-                   android:layout_weight="1"
-                   android:layout_margin="@dimen/dp_3"
-                   android:textColor="@color/app_theme"
-                   android:text="店铺"
-                   android:textSize="@dimen/sp_16"
-                   android:background="@android:color/white"
-                   android:gravity="center"/>
-           </LinearLayout>
-
-           <android.support.v7.widget.RecyclerView
-               android:id="@+id/at_my_collect_goods_rv"
                android:layout_width="match_parent"
-               android:layout_height="wrap_content">
-           </android.support.v7.widget.RecyclerView>
-           <android.support.v7.widget.RecyclerView
-               android:id="@+id/at_my_collect_store_rv"
-               android:visibility="gone"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
+               android:layout_height="match_parent"
+               android:orientation="vertical"
+               android:background="@android:color/white">
+               <LinearLayout
+                   android:layout_width="@dimen/dp_155"
+                   android:layout_height="@dimen/dp_30"
+                   android:layout_gravity="center_horizontal"
+                   android:layout_marginTop="@dimen/dp_10"
+                   android:layout_marginBottom="@dimen/dp_10"
+                   android:background="@drawable/stroke_app_theme"
+                   android:orientation="horizontal">
 
-           </android.support.v7.widget.RecyclerView>
-          <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:background="@color/background">
-              <TextView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="猜你喜欢"
-                  android:layout_gravity="center_horizontal"
-                  android:layout_marginTop="@dimen/dp_13"
-                  android:textColor="@color/text3"
-                  android:textSize="@dimen/sp_16"/>
-              <android.support.v7.widget.RecyclerView
-                  android:id="@+id/at_my_collect_like_rv"
+                   <TextView
+                       android:id="@+id/ac_myCollect_tv_goods"
+                       android:layout_width="0dp"
+                       android:layout_height="match_parent"
+                       android:layout_weight="1"
+                       android:layout_margin="@dimen/dp_3"
+                       android:textColor="@android:color/white"
+                       android:text="商品"
+                       android:textSize="@dimen/sp_16"
+                       android:background="@color/app_theme"
+                       android:gravity="center"/>
+                   <TextView
+                       android:id="@+id/ac_myStore_tv_stores"
+                       android:layout_width="0dp"
+                       android:layout_height="match_parent"
+                       android:layout_weight="1"
+                       android:layout_margin="@dimen/dp_3"
+                       android:textColor="@color/app_theme"
+                       android:text="店铺"
+                       android:textSize="@dimen/sp_16"
+                       android:background="@android:color/white"
+                       android:gravity="center"/>
+               </LinearLayout>
+
+               <android.support.v7.widget.RecyclerView
+                   android:id="@+id/at_my_collect_goods_rv"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+               </android.support.v7.widget.RecyclerView>
+               <android.support.v7.widget.RecyclerView
+                   android:id="@+id/at_my_collect_store_rv"
+                   android:visibility="gone"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+
+               </android.support.v7.widget.RecyclerView>
+              <LinearLayout
                   android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_marginTop="@dimen/dp_10">
-              </android.support.v7.widget.RecyclerView>
-          </LinearLayout>
-       </LinearLayout>
-   </ScrollView>
-
-
-
+                  android:layout_height="match_parent"
+                  android:orientation="vertical"
+                  android:background="@color/background">
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="猜你喜欢"
+                      android:layout_gravity="center_horizontal"
+                      android:layout_marginTop="@dimen/dp_13"
+                      android:textColor="@color/text3"
+                      android:textSize="@dimen/sp_16"/>
+                  <android.support.v7.widget.RecyclerView
+                      android:id="@+id/at_my_collect_like_rv"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginTop="@dimen/dp_10">
+                  </android.support.v7.widget.RecyclerView>
+              </LinearLayout>
+           </LinearLayout>
+       </ScrollView>
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
