--- a/app/src/main/res/layout/activity_my_coupon.xml
+++ b/app/src/main/res/layout/activity_my_coupon.xml
@@ -12,7 +12,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
-        android:background="@color/line"/>
+        android:background="@color/background"/>
     <android.support.design.widget.TabLayout
         android:id="@+id/at_my_coupon_tab"
         android:layout_width="match_parent"
