--- a/app/src/main/res/layout/activity_my_wallet_income.xml
+++ b/app/src/main/res/layout/activity_my_wallet_income.xml
@@ -8,7 +8,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
-        android:background="@color/line"/>
+        android:background="@color/background"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40">
@@ -25,7 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_60"
-        android:background="@color/line"
+        android:background="@color/background"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
