--- a/app/src/main/res/layout/activity_shop_log.xml
+++ b/app/src/main/res/layout/activity_shop_log.xml
@@ -8,11 +8,11 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
-        android:background="@color/line"/>
+        android:background="@color/background"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_60"
-        android:background="@color/line"
+        android:background="@color/background"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
