--- a/app/src/main/res/layout/activity_store_manager_qrcode.xml
+++ b/app/src/main/res/layout/activity_store_manager_qrcode.xml
@@ -11,37 +11,36 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_422">
-        <LinearLayout
+        <View
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_140"
-            android:background="@color/app_theme"></LinearLayout>
+            android:layout_height="@dimen/dp_160"
+            android:background="@color/app_theme"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_400"
             android:layout_marginTop="@dimen/dp_15"
             android:background="@drawable/store_manager_qrcode_bg"
             android:orientation="vertical"
+            android:layout_centerInParent="true"
             android:gravity="center_horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="打开农品街扫一扫"
                 android:textColor="@color/text6"
-                android:textSize="@dimen/sp_13"
-                android:layout_marginTop="@dimen/dp_101"/>
+                android:textSize="@dimen/sp_12"
+                android:layout_marginTop="@dimen/dp_100"/>
 
             <ImageView
+                android:visibility="visible"
                 android:id="@+id/ac_storeManager_iv_QRCode"
-                android:layout_width="@dimen/dp_157"
-                android:layout_height="@dimen/dp_159"
-                android:layout_marginTop="@dimen/dp_13"
-                android:src="@mipmap/ic_launcher"/>
-
+                android:layout_width="@dimen/dp_220"
+                android:layout_height="@dimen/dp_220"
+                android:background="@color/app_theme"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_30"
-                android:text="自用省钱 分享赚钱！"
+                android:text="自用省钱  分享赚钱!"
                 android:textColor="@color/app_theme"
                 android:textSize="@dimen/sp_16"/>
         </LinearLayout>
