--- a/app/src/main/res/layout/activity_video_buy_confim.xml
+++ b/app/src/main/res/layout/activity_video_buy_confim.xml
@@ -60,6 +60,7 @@
                         android:layout_height="@dimen/dp_95"
                         android:src="@mipmap/ic_launcher"
                         android:layout_centerVertical="true"
+                        android:scaleType="fitXY"
                         android:layout_marginLeft="@dimen/dp_12"/>
 
                     <LinearLayout
@@ -76,7 +77,9 @@
                             android:text="系统提升种植能力五部曲"
                             android:textColor="@color/text3"
                             android:textSize="@dimen/sp_15"
-                            android:layout_marginTop="@dimen/dp_19"/>
+                            android:singleLine="true"
+                            android:ellipsize="end"
+                            android:layout_marginTop="@dimen/dp_13"/>
 
                         <TextView
                             android:id="@+id/at_video_buy_confirm_tv_teacher"
@@ -85,7 +88,7 @@
                             android:text="主讲：张宇房"
                             android:textSize="@dimen/sp_13"
                             android:textColor="@color/text6"
-                            android:layout_marginTop="@dimen/dp_10"/>
+                            android:layout_marginTop="@dimen/dp_8"/>
                         <TextView
                             android:id="@+id/at_video_buy_confirm_tv_type"
                             android:layout_width="wrap_content"
@@ -97,6 +100,7 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dp_4"
                             android:orientation="horizontal">
                             <TextView
                                 android:layout_width="wrap_content"
@@ -109,6 +113,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="¥1225"
+                                android:textStyle="bold"
                                 android:textColor="@color/app_theme"
                                 android:textSize="@dimen/sp_13"/>
                         </LinearLayout>
@@ -267,17 +272,23 @@
                 android:background="@color/background"
                 android:layout_marginLeft="@dimen/dp_12"
                 android:layout_marginRight="@dimen/dp_12"></View>
-            <EditText
-                android:id="@+id/ac_videoBuyConfirm_et_remark"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_12"
-                android:layout_marginRight="@dimen/dp_12"
-                android:background="@drawable/gray_conner"
-                android:hint="买家留言200字以内（选填）"
-                android:layout_marginTop="@dimen/dp_10"
-                android:textSize="@dimen/sp_14"
-                android:padding="@dimen/dp_13"/>
+                android:focusableInTouchMode="true"
+                android:focusable="true">
+                <EditText
+                    android:id="@+id/ac_videoBuyConfirm_et_remark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginRight="@dimen/dp_12"
+                    android:background="@drawable/gray_conner"
+                    android:hint="买家留言200字以内（选填）"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:textSize="@dimen/sp_14"
+                    android:padding="@dimen/dp_13"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
@@ -304,6 +315,7 @@
             android:textColor="@color/app_theme"
             android:textSize="@dimen/sp_14"
             android:layout_marginLeft="@dimen/dp_2"
+            android:textStyle="bold"
             android:text="￥220"/>
 
         <Button
