--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -29,10 +29,9 @@
             android:textColor="@android:color/white"/>
     </LinearLayout>
     <View
-        android:layout_marginTop="@dimen/dp_10"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_10"
-        android:background="@color/line"/>
+        android:background="@color/background"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -70,7 +69,7 @@
         android:layout_marginLeft="@dimen/dp_12"
         android:layout_marginRight="@dimen/dp_12"
         android:layout_marginTop="@dimen/dp_5"
-        android:background="@color/line"/>
+        android:background="@color/background"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40">
