--- a/app/src/main/res/layout/fragment_buy_gift.xml
+++ b/app/src/main/res/layout/fragment_buy_gift.xml
@@ -4,10 +4,15 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context="com.zthx.npj.ui.fragment.BuyGiftFragment">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fg_buy_gift_rv"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fg_buy_gift_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <com.scwang.smartrefresh.layout.footer.FalsifyFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </FrameLayout>
