--- a/app/src/main/res/layout/fragment_discover_supply.xml
+++ b/app/src/main/res/layout/fragment_discover_supply.xml
@@ -239,7 +239,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
-            android:background="@color/line"></View>
+            android:background="@color/background"></View>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/fg_discover_supply_rv"
             android:layout_width="match_parent"
@@ -279,7 +279,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
-            android:background="@color/line"></View>
+            android:background="@color/background"></View>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/fg_discover_need_rv"
             android:layout_width="match_parent"
