--- a/app/src/main/res/layout/item_map_address.xml
+++ b/app/src/main/res/layout/item_map_address.xml
@@ -11,5 +11,5 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
-            android:background="@color/line"/>
+            android:background="@color/background"/>
 </LinearLayout>
