--- a/app/src/main/res/layout/item_my_bill_list.xml
+++ b/app/src/main/res/layout/item_my_bill_list.xml
@@ -8,7 +8,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_10"
-        android:background="@color/line"/>
+        android:background="@color/background"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40">
